# swagger.json
@@ -5,10 +5,10 @@
     "description": "API for managing recipes",
     "version": "1.0.0"
   },
-  "host": "localhost:3000",
+  "host": "recipe-cse341.onrender.com",
   "basePath": "/",
   "schemes": [
-    "http"
+    "https"
   ],
   "paths": {
     "/recipes/": {
